# breez-sdk-regtest

./: .env  .gitmodules  Makefile  TODO.md  docker-compose.yml  start.sh  stop.sh
bitcoind/: Dockerfile
breez-server/: Dockerfile  entrypoint.sh
greenlight-scheduler/: Cargo.toml  Dockerfile  build.rs
greenlight-scheduler/src/: init.rs  main.rs  server.rs  tls.rs
lightningd/: Dockerfile
lightningd-alice/: Dockerfile  cln  entrypoint.sh
lightningd-greenlight/: Dockerfile  entrypoint.sh
lightningd-lsp/: Dockerfile  entrypoint.sh
lspd/: Dockerfile  entrypoint.sh
lsps2-server/: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
lsps2-server/src/: main.rs
miner/: Cargo.toml  Dockerfile
miner/src/: main.rs
rgs/: Dockerfile
rgs-server/: Dockerfile
scripts/: fund_lsps2_server.sh  open_channel_to_lsps2_server.sh
slow-proxy/: Dockerfile  simulate-3g.sh  simulate-4g.sh
swapd/: Dockerfile
vss/: Dockerfile
vss-server/: vss-server-config.toml
